[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcnexus"
version = "1.0.0"
authors = [
  { name="Bogdan11212", email="your.email@example.com" },
]
description = "A high-performance, asynchronous Python library for Minecraft server management (RCON, Status, SLP)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dnspython>=2.4.0",
    "aiohttp>=3.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.urls]
"Homepage" = "https://github.com/Bogdan11212/mcnexus"
"Bug Tracker" = "https://github.com/Bogdan11212/mcnexus/issues"
"Documentation" = "https://bogdan11212.github.io/mcnexus/"
